--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
         <div class="row debug">
           <div class="col-xs-8 col-lg-6">lorem</div>
           <div class="col-xs-4 col-lg-6">
-           <div class="col-lg-4">lorem</div>
-           <div class="col-lg-4">lorem</div>
-           <div class="col-lg-4">lorem</div>
+          <div class="col-lg-4">lorem</div>
+          <div class="col-lg-4">lorem</div>
+          <div class="col-lg-4">lorem</div>
+        </div>
+      </section>
+      <section id="jumbo"class="container-fluid">
+        <div class="row debug">
+          <div class="col-xs-12 col-md-12 col-lg-12">
+            <div class="container debug text-center">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+             sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
           </div>
         </div>
       </section>
