--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>html-css-bootstrap-freelancer</title>
   </head>
   <body>
+    <!--header-->
     <header>
+      <!--section nav-header-->
       <section id="nav-header" class="container-fluid">
         <div class="row debug">
           <div class="col-xs-8 col-lg-6">lorem</div>
@@ -19,6 +21,7 @@
           <div class="col-lg-4">lorem</div>
         </div>
       </section>
+      <!--section-jumbo-->
       <section id="jumbo"class="container-fluid">
         <div class="row debug">
           <div class="col-xs-12 col-md-12 col-lg-12">
@@ -28,6 +31,22 @@
             </div>
           </div>
         </div>
+      </section>
+      <!--section-portfolio-->
+      <section id="portfolio" class="container">
+        <div class="portfolio-title text-center">lorem</div>
+        <div class="row debug">
+          <div class="col-lg-4 col-md-6 col-xs-12">
+            <div class="portfolio-box"></div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-xs-12">
+            <div class="portfolio-box"></div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-xs-12">
+            <div class="portfolio-box"></div>
+          </div>
+        </div>
+
       </section>
 
     </header>
