inserimento portfolio-box in sezione portfolio

--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
         <div class="row debug">
           <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="portfolio-box"></div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-xs-12">
             <div class="portfolio-box"></div>
           </div>
           <div class="col-lg-4 col-md-6 col-xs-12">
+            <div class="portfolio-box"></div>
+            <div class="portfolio-box"></div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-xs-12">
+            <div class="portfolio-box"></div>
             <div class="portfolio-box"></div>
           </div>
         </div>
