--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
           </div>
         </div>
       </section>
+    </header>
       <!--section-portfolio-->
-      <section id="portfolio" class="container">
+    <main>
+      <section id="portfolio" class="container margin_bottom10">
         <div class="portfolio-title text-center">lorem</div>
         <div class="row debug">
           <div class="col-lg-4 col-md-6 col-xs-12">
@@ -49,14 +51,39 @@
             <div class="portfolio-box"></div>
           </div>
         </div>
-
       </section>
-
+      <section id="about" class="container-fluid text-center margin_bottom10">
+        <div class="row debug">
+          <div class="col-lg-12">lorem</div>
+          <div class="col-lg-6 col-md-12 col-xs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+             qui officia deserunt mollit anim id est laborum.</div>
+          <div class="col-lg-6 col-md-12 col-xs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+             qui officia deserunt mollit anim id est laborum.</div>
+        </div>
+      </section>
+      <section id="contact-me"class="container margin_bottom10">
+        <div class="row debug">
+          <div class="col-xs-12 col-md-12 col-lg-12 text-center">lorem</div>
+          <div class="col-xs-12 col-md-12 col-lg-12">Lorem</div>
+          <div class="col-xs-12 col-md-12 col-lg-12">Lorem</div>
+          <div class="col-xs-12 col-md-12 col-lg-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+          <div class="col-xs-12 col-md-12 col-lg-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+        </div>
+      </section>
     </header>
-    <main>
-
     </main>
-    <footer></footer>
-
+    <footer>
+      <section id="info" class=" debug container-fluid">
+        <div class="col-lg-4 col-md-4 col-xs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+           qui officia deserunt mollit anim id est laborum.</div>
+        <div class="col-lg-4 col-md-4 col-xs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culp
+          a qui officia deserunt mollit anim id est laborum.</div>
+        <div class="col-lg-4 col-md-4 col-xs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+           qui officia deserunt mollit anim id est laborum.</div>
+      </section>
+      <section id="copyright" class="container-fluid">
+        <div class="copyright-text text-center">lorem</div>
+      </section>
+    </footer>
   </body>
 </html>
