--- a/index.html
+++ b/index.html
@@ -5,85 +5,138 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- nostro style -->
     <link rel="stylesheet" href="css/style.css">
-    <title>html-css-bootstrap-freelancer</title>
+    <title>Start Bootstrap</title>
   </head>
   <body>
-    <!--header-->
+    <!-- header -->
     <header>
-      <!--section nav-header-->
-      <section id="nav-header" class="container-fluid">
-        <div class="row debug">
-          <div class="col-xs-8 col-lg-6">lorem</div>
-          <div class="col-xs-4 col-lg-6">
-          <div class="col-lg-4">lorem</div>
-          <div class="col-lg-4">lorem</div>
-          <div class="col-lg-4">lorem</div>
+      <!-- header_top  -->
+      <div class="header_top">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-6">
+              Lorem ipsum dolor sit amet
+            </div>
+            <div class="col-xs-6 text-right">
+              <nav>
+                <a href="#" class="btn btn_green hidden-lg">Menu <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span></a>
+                <ul class="visible-lg">
+                  <li>Lorem ipsum dolor sit amet</li>
+                </ul>
+              </nav>
+            </div>
+          </div>
         </div>
-      </section>
-      <!--section-jumbo-->
-      <section id="jumbo"class="container-fluid">
-        <div class="row debug">
-          <div class="col-xs-12 col-md-12 col-lg-12">
-            <div class="container debug text-center">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-             sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+      <!-- /header_top  -->
+
+      <!-- jumbo -->
+      <div class="jumbo bg_green">
+        <div class="jumbo_text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+      <!-- jumbo -->
+
+    </header>
+    <!-- /header -->
+
+    <!-- main -->
+    <main>
+      <!-- portfolio -->
+      <section id="portfolio" class="padding_top_80 padding_bottom_80">
+        <h2 class="text-center">Lorem</h2>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="box_portfolio"></div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="box_portfolio"></div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="box_portfolio"></div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="box_portfolio"></div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="box_portfolio"></div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="box_portfolio"></div>
             </div>
           </div>
         </div>
       </section>
-    </header>
-      <!--section-portfolio-->
-    <main>
-      <section id="portfolio" class="container margin_bottom10">
-        <div class="portfolio-title text-center">lorem</div>
-        <div class="row debug">
-          <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="portfolio-box"></div>
-            <div class="portfolio-box"></div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="portfolio-box"></div>
-            <div class="portfolio-box"></div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-xs-12">
-            <div class="portfolio-box"></div>
-            <div class="portfolio-box"></div>
+      <!-- /portfolio -->
+
+      <!-- about -->
+      <section id="about" class="bg_green padding_top_80 padding_bottom_80">
+        <div class="wrapper_md_60 wrapper_xs_100">
+          <h2 class="text-center">Lorem</h2>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-xs-12 col-md-6">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </div>
+              <div class="col-xs-12 col-md-6">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </div>
+            </div>
           </div>
         </div>
       </section>
-      <section id="about" class="container-fluid text-center margin_bottom10">
-        <div class="row debug">
-          <div class="col-lg-12">lorem</div>
-          <div class="col-lg-6 col-md-12 col-xs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-             qui officia deserunt mollit anim id est laborum.</div>
-          <div class="col-lg-6 col-md-12 col-xs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-             qui officia deserunt mollit anim id est laborum.</div>
+      <!-- /about -->
+
+      <!-- contact -->
+      <section id="contact" class="padding_top_80 padding_bottom_80">
+        <div class="wrapper_md_60 wrapper_xs_100">
+          <h2 class="text-center">Lorem</h2>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-xs-12">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </div>
+            </div>
+          </div>
         </div>
       </section>
-      <section id="contact-me"class="container margin_bottom10">
-        <div class="row debug">
-          <div class="col-xs-12 col-md-12 col-lg-12 text-center">lorem</div>
-          <div class="col-xs-12 col-md-12 col-lg-12">Lorem</div>
-          <div class="col-xs-12 col-md-12 col-lg-12">Lorem</div>
-          <div class="col-xs-12 col-md-12 col-lg-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-          <div class="col-xs-12 col-md-12 col-lg-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-        </div>
-      </section>
-    </header>
+      <!-- /contact -->
+
     </main>
+    <!-- /main -->
+
+    <!-- footer -->
     <footer>
-      <section id="info" class=" debug container-fluid">
-        <div class="col-lg-4 col-md-4 col-xs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-           qui officia deserunt mollit anim id est laborum.</div>
-        <div class="col-lg-4 col-md-4 col-xs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culp
-          a qui officia deserunt mollit anim id est laborum.</div>
-        <div class="col-lg-4 col-md-4 col-xs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-           qui officia deserunt mollit anim id est laborum.</div>
-      </section>
-      <section id="copyright" class="container-fluid">
-        <div class="copyright-text text-center">lorem</div>
-      </section>
+      <!-- footer_top -->
+      <div class="footer_top padding_top_80 padding_bottom_80">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-4">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+            <div class="col-xs-12 col-md-4">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+            <div class="col-xs-12 col-md-4">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /footer_top -->
+
+      <!-- footer_bottom -->
+      <div class="footer_bottom text-center">
+        Copyright © Your Website 2019
+      </div>
+      <!-- /footer_bottom -->
     </footer>
+    <!-- /footer -->
+
   </body>
 </html>
