inserimento classi su header-top

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-6">
-              Lorem ipsum dolor sit amet
+              <a href="#logo" class="font_size30 text-uppercase color_white"> <strong>start bootstrap</strong></a>
             </div>
             <div class="col-xs-6 text-right">
               <nav>
                 <a href="#" class="btn btn_green hidden-lg">Menu <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span></a>
-                <ul class="visible-lg">
-                  <li>Lorem ipsum dolor sit amet</li>
+                <ul class="visible-lg list-inline">
+                  <li class="color_white text-uppercase">portfolio</li>
+                  <li class="color_white text-uppercase">about</li>
+                  <li class="color_white text-uppercase">contact</li>
                 </ul>
               </nav>
             </div>
