--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
 
       <!-- jumbo -->
       <div class="jumbo bg_green">
-        <div class="jumbo_text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="jumbo_text text-center">
+          <img class="size_30" src="img/boysmiled.svg" alt="boysmiled">
+          <h1 class="font-size65 color_white"> <strong>START BOOTSTRAP</strong></h1>
+          <div class="icon_star"></div>
         </div>
       </div>
       <!-- jumbo -->
