inserimento star-icon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <!--fontawesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <!-- nostro style -->
     <link rel="stylesheet" href="css/style.css">
     <title>Start Bootstrap</title>
@@ -40,7 +41,9 @@
         <div class="jumbo_text text-center">
           <img class="size_30" src="img/boysmiled.svg" alt="boysmiled">
           <h1 class="font-size65 color_white"> <strong>START BOOTSTRAP</strong></h1>
-          <div class="icon_star"></div>
+          <div class="liner_star"></div>
+          <div class="icon_star"><i class="fas fa-star"></i></div>
+          <div class="liner_star"></div>
         </div>
       </div>
       <!-- jumbo -->
