inserimento titolo in portfolio

--- a/index.html
+++ b/index.html
@@ -42,20 +42,23 @@
           <img class="size_30" src="img/boysmiled.svg" alt="boysmiled">
           <h1 class="font-size65 color_white"> <strong>START BOOTSTRAP</strong></h1>
           <div class="liner_star"></div>
-          <div class="icon_star"><i class="fas fa-star"></i></div>
+          <div class="icon_star color_white"><i class="fas fa-star"></i></div>
           <div class="liner_star"></div>
+          <h3 class="color_white font_size30">Graphic Artist - Web Designer - Illustrator</h3>
         </div>
       </div>
       <!-- jumbo -->
-
     </header>
     <!-- /header -->
-
     <!-- main -->
     <main>
       <!-- portfolio -->
       <section id="portfolio" class="padding_top_80 padding_bottom_80">
-        <h2 class="text-center">Lorem</h2>
+        <div class="portfolio_text text-center">
+          <h2 class="text-center color_darkblue">PORTFOLIO</h2>
+          <div class="liner_star"></div>
+          <div class="icon_star color_darkblue"><i class="fas fa-star"></i></div>
+          <div class="liner_star"></div>
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-4">
