--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="box_portfolio"></div>
+              <div id="cabin" class="box_portfolio portfolio_bg border_redius5"></div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="box_portfolio"></div>
+              <div id="cake"class="box_portfolio portfolio_bg border_redius5"></div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="box_portfolio"></div>
+              <div id="circus" class="box_portfolio portfolio_bg border_redius5"></div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="box_portfolio"></div>
+              <div id="game"class="box_portfolio portfolio_bg border_redius5"></div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="box_portfolio"></div>
+              <div id="safe" class="box_portfolio portfolio_bg border_redius5"></div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="box_portfolio"></div>
+              <div id="submarine" class="box_portfolio portfolio_bg border_redius5"></div>
             </div>
           </div>
         </div>
