--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!-- portfolio -->
       <section id="portfolio" class="padding_top_80 padding_bottom_80">
         <div class="portfolio_text text-center">
-          <h2 class="text-center color_darkblue">PORTFOLIO</h2>
+          <h2 class="text-center color_darkblue font_size30"> <strong>PORTFOLIO</strong></h2>
           <div class="liner_star"></div>
           <div class="icon_star color_darkblue"><i class="fas fa-star"></i></div>
           <div class="liner_star"></div>
@@ -86,15 +86,18 @@
 
       <!-- about -->
       <section id="about" class="bg_green padding_top_80 padding_bottom_80">
-        <div class="wrapper_md_60 wrapper_xs_100">
-          <h2 class="text-center">Lorem</h2>
+        <div class="wrapper_md_60 wrapper_xs_100 text-center">
+          <h2 class="text-center color_white font_size30"> <strong>ABOUT</strong></h2>
+          <div class="liner_star"></div>
+          <div class="icon_star color_white"><i class="fas fa-star"></i></div>
+          <div class="liner_star"></div>
           <div class="container-fluid">
             <div class="row">
               <div class="col-xs-12 col-md-6">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <p class="color_white font_size20">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
               </div>
               <div class="col-xs-12 col-md-6">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+               <p class="color_white font_size20">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
               </div>
             </div>
           </div>
